# python-htmx-example

./: .gitignore  List.html  hello.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: main.py  models.py  utils.py
src/api/: main.py
src/api/routes/: todos_api.py
src/client/: deps.py  main.py
src/client/routes/: todos_client.py
src/content/: home.md
src/core/: db.py  deps.py
src/model/: todos_model.py
src/static/: app.js
src/static/css/: tailwind.css
src/templates/: _theme_changer.html  main_layout.html
src/templates/layouts/: check_htmx_layout.html  htmx_layout.html  main_layout.html  no_htmx_layout.html
src/templates/pages/: edit_todo_page.html  home.html  todo_page.html  todos_page.html
src/templates/partials/: add_todo.html  navbar.html  navigation.html  no_script_styles.html  search_todo.html  theme_changer.html  todo.html  todos_list.html
